index.css
/* ... */
.tab-list {
  --gap: 2rem;
}

.dot-indicators > * {
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  padding: 0.5em;
  background-color: hsl(var(--clr-white) / 25%);
}

.dot-indicators > *:hover,
.dot-indicators > *:focus {
  background-color: hsl(var(--clr-white) / 50%);
}

.dot-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
}

.numbered-indicators > * {
  padding: 0 1em;
  border-radius: 50%;
  aspect-ratio: 1;
  border: 0;
  place-items: center;
}

.numbered-indicators > [aria-selected="true"] {
  background-color: hsl(var(--clr-white) / 1);
  color: hsl(var(--clr-dark));
}

.numbered-indicators > [aria-selected="false"] {
  background-color: hsl(var(--clr-dark) / 50%);
  color: hsl(var(--clr-white));
  border: 1px solid hsl(var(--clr-white) / 25%);
}

.numbered-indicators > *:hover,
.numbered-indicators > *:focus {
  background-color: hsl(var(--clr-dark) / 50%);
  color: hsl(var(--clr-white));
  border: 1px solid hsl(var(--clr-white));
}

/* --------------------------- */
/* Page Specific Backgrounds */
/* --------------------------- */

body {
  background-size: cover;
  background-position: bottom center;
}

/* home */
.home {
  background-image: url(./assets/home/background-home-mobile.jpg);
}

@media (min-width: 35rem) {
  .home {
    background-position: center center;
    background-image: url(./assets/home/background-home-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .home {
    background-image: url(./assets/home/background-home-desktop.jpg);
  }
}

/* destination */
.destination {
  background-image: url(./assets/destination/background-destination-mobile.jpg);
}

@media (min-width: 35rem) {
  .destination {
    background-position: center center;
    background-image: url(./assets/destination/background-destination-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .destination {
    background-image: url(./assets/destination/background-destination-desktop.jpg);
  }
}

/* crew */
.crew {
  background-image: url(./assets/crew/background-crew-mobile.jpg);
}

@media (min-width: 35rem) {
  .crew {
    background-position: center center;
    background-image: url(./assets/crew/background-crew-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .crew {
    background-image: url(./assets/crew/background-crew-desktop.jpg);
  }
}

/* technology */
.technology {
  background-image: url(./assets/technology/background-technology-mobile.jpg);
}

@media (min-width: 35rem) {
  .technology {
    /* background-position: center center; */
    background-image: url(./assets/technology/background-technology-tablet.jpg);
  }
}

@media (min-width: 45rem) {
  .technology {
    background-image: url(./assets/technology/background-technology-desktop.jpg);
  }
}
/* --------------------------- */
/* Layout -------------------- */
/* --------------------------- */

.grid-container {
  text-align: center;
  display: grid;
  place-items: center;
  padding-inline: 1rem;
  padding-bottom: 3rem;
}

.grid-container p:not([class]) {
  max-width: 50ch;
}

.numbered-title {
  grid-area: title;
}

/* destination layout */

.grid-container--destination {
  --flow-space: 2rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.grid-container--destination > picture {
  grid-area: image;
  max-width: 60%;
  align-self: start;
}

.grid-container--destination > .tab-list {
  grid-area: tabs;
}

.grid-container--destination > .destination-info {
  grid-area: content;
}

.destination-meta {
  flex-direction: column;
  border-top: 1px solid hsl(var(--clr-white) / 0.1);
  padding-top: 2.5rem;
  margin-top: 2.5rem;
}

.destination-meta p {
  font-size: 1.75rem;
}

/* the crew layout */

.grid-container--crew {
  --flow-space: 2rem;
  grid-template-areas:
    "title"
    "image"
    "tabs"
    "content";
}

.grid-container--crew > picture {
  grid-area: image;
  max-width: 60%;
  border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
}

.grid-container--crew > .dot-indicators {
  grid-area: tabs;
}

.grid-container--crew > .crew-details {
  grid-area: content;
}

.crew-details h2 {
  color: hsl(var(--clr-white) / 0.5);
}

@media (min-width: 35rem) {
  .numbered-title {
    justify-self: start;
    margin-top: 2rem;
  }
  .destination-meta {
    flex-direction: row;
    justify-content: space-evenly;
  }

  .grid-container--crew {
    padding-bottom: 0;
    grid-template-areas:
      "title"
      "content"
      "tabs"
      "image";
  }
}

@media (min-width: 45rem) {
  .grid-container {
    text-align: left;
    column-gap: var(--container-gap, 2rem);
    grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(
        1rem,
        1fr
      );
  }

  .grid-container--home {
    padding-bottom: max(6rem, 20vh);
    align-items: end;
  }

  .grid-container--home > *:first-child {
    grid-column: 2;
  }

  .grid-container--home > *:last-child {
    grid-column: 3;
  }

  .grid-container--destination {
    justify-items: start;
    align-content: start;
    grid-template-areas:
      ". title title ."
      ". image tabs ."
      ". image content .";
  }

  .grid-container--destination > picture {
    max-width: 92%;
  }
  .grid-container--crew > picture {
    grid-column: span 2;
    align-self: end;
    max-width: 95%;
  }

  .destination-meta {
    --gap: min(6vw, 6rem);
    justify-content: start;
  }

  .grid-container--crew {
    grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(
        1rem,
        1fr
      );
    justify-items: start;
    grid-template-areas:
      ". title title ."
      ". content image ."
      ". tabs image .";
  }
}

[role="tab"]:focus {
  color: white;
}

